2012-01-29 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-io-provider.c (na_io_provider_write_item):
	Reset the NAIOProvider after having wrote the item.

	* src/nact/nact-menubar-file.c (save_item): Warns if an error occurs.

	* src/core/na-icontext.c (is_candidate_for_show_if_registered):
	Consider having either GDBus or DBus-GLib.

	* m4/na-check-for-gdbus.m4: Setup CFLAGS and LIBS flags.

2012-01-28 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-iexporter.h:
	* src/api/na-iio-provider.h: Improve interface comments.

	* src/core/na-factory-object.c (na_factory_object_copy):
	Only copies non-null provider and provider data items.

	* src/plugin-tracker/na-tracker-dbus.xml:
	Renamed as src/plugin-tracker/na-tracker-dbus-glib.xml.

	* src/plugin-tracker/Makefile.am:
	* src/utils/Makefile.am: Updated accordingly.

	* src/plugin-tracker/na-tracker-gdbus.xml: New file.

	* src/plugin-tracker/Makefile.am: Generate code for GDBus.

	* src/plugin-tracker/na-tracker-dbus.c:
	* src/plugin-tracker/na-tracker-dbus.h: Removed files.

	* src/plugin-tracker/na-tracker-dbus.xml: Updated accordingly.

	* src/plugin-tracker/na-tracker.c:
	* src/plugin-tracker/na-tracker.h:
	Implement GDBus server high-level API.
	Rename GType macro name.

	* src/plugin-tracker/na-tracker-plugin.c
	(nautilus_module_list_types): Updated to new GType macro name.

	* src/utils/Makefile.am: Generate code for GDBus.

	* src/utils/nautilus-actions-run.c: Implement GDBus client high-level API.

	* m4/na-check-for-gdbus.m4: Requires GIO 2.30 (GDBusObjectManagerServer).

	* docs/reference/nautilus-actions-sections.txt: Update reference manual.

2012-01-27 Pierre Wieser <pwieser@trychlos.org>

	* m4/na-check-for-gdbus.m4: New file.

	* configure.ac: Updated accordingly.

	* src/api/na-dbus.h:
	* src/plugin-tracker/na-tracker-dbus.xml:
	* src/utils/nautilus-actions-run.c:
	Tracker DBus interface is renamed as
	org.nautilus_actions.DBus.Tracker.Properties1 and versioned according to